# Uchprakt

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  configManager.cpp  configManager.h  constraints.cpp  constraints.h  constraints.json  default_config.json  plantcontrol  plantcontrol.cpp
